# msword-cli

./: .gitignore  FUTURE-EXPANSION.md  LICENSE  README.md  msword_cli.py  pyproject.toml
tests/: README.md  conftest.py  test_api.py  test_cli.py  test_plugins.py
tests/integration/: test_word_integration.py
